Remove readme.md

--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
 
 				  So I'll start just by giving an overview of why I think that's an interesting question. 
 
-
-				  
 				  Background photo credit: 
 				  Confocal micrograph of hippocampal interneurons that express serotonin receptors (green) co-labeled in red for calretinin, and counterstained with DAPI (blue), a marker of cell nuclei. Credit: Margaret I. Davis
 
@@ -71,7 +69,7 @@
 		  <!-- ---------------------------------------------------------------------- -->
 
 	  <section data-background-color="#000000">
-		<h2>Neuroscience and causality</h2>
+		<h2>Causality in neuroscience</h2>
 		<div>
 		<img src="assets/zebrafish.png" style="border: 0px" width="70%">
 		</div>
@@ -84,7 +82,7 @@
 		<span style="color: red"></span> •
 		-------------- 
 
-		Arguably, most scientific theories demand causal explanations. We want to know what mechanism is behind some behavior. What it really means for some mechanism to be behind some behavior of phenomenon of interest is that we have an understanding of when we tweak some part of the underlying system, we can predict what the effect will be on the behaviors. This involves understanding the causal relationships at play. To that end, often in neuroscience, and biology: 
+		Arguably, most scientific theories demand causal explanations. We want to know what mechanism is behind some behavior or phenomenon. What it really means for some mechanism to be behind some behavior of phenomenon of interest is that we have an understanding of when we tweak some part of the underlying system, we can predict what the effect will be on the behavior of interest. This involves understanding the causal relationships at play. To that end, often in neuroscience, and biology: 
 		
 		we want to know how something will behave under different interventions, make predictions, know how to achieve some desired goal using this predictive information -- this all requires knowing the causal relationships in a system. 
 
@@ -92,17 +90,14 @@
 
 		It is hard to establish one brain region, or even one neuron, has a causal effect on some behavior, or 
 		some other neuron or brain region for a number of reasons:
-		* complicated feedback dynamics 
+		* complicated feedback dynamics (with environment, and within the nervous system)
 		* hard to control 
 		* hard to fully observe
 		* high dimensional 
 	   
-		It is for this reason that I think a number of challenges in neuroscience are related to causation:
+		All of these things make determining causal relationships difficult
 		
-		* Explanation in neuro: intepretability 
-		* 
-
-		I won't talk about this today, but challenges in 
+		I won't talk about this today, but my reseach spans computational neuroscience and 
 
 		My research has focused on the following claim: that explicitly casting problems as causal learning problems 
 
@@ -117,7 +112,7 @@
 
 
   <section data-background-color="#000000">
-	<h2>Neuroscience and causality</h2>
+	<h2>Causality in neuroscience</h2>
 	Challenges to obtaining causal relationships in neuroscience:
 	<div>
 	<div id = "left">
@@ -144,8 +139,8 @@
   </aside>	</section>
 
   <section data-background-color="#000000">
-	<h2>(Machine learning and causality)</h2>
-	Causation also relates to a number of challenges in machine learning 
+	<h2>(Causality in machine learning)</h2>
+	Causation also relates to a number of challenges in machine learning: 
 	<div>
 	<div id = "left">
 		<br>
@@ -559,7 +554,7 @@
 					<video class="slideautostart" src="assets/chris_paper_S1.ogv" muted controls loop autoplay
 					poster="assets/CorticalFOV.png" width="45%">
 					</video>
-					<p class="rcred">Calcium imaging in Hydra. Dupre and Yuste 2017</p>
+					<p class="rcred">Calcium imaging in Hydra. Dupre and Yuste 2017 (Can load benlansdell.github.io/stjude for the video)</p>
 					</div>
 					<ul class = "fragment">
 					<li> But computationally, a spiking discontinuity is inconvenient for learning
