--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="reveal">
 			<div class="slides">
 
-				<section data-background="assets/brain2_darkest.png">
+				<section data-background="assets/brain2_darkest2.png">
 					<h1>The neuronal credit assignment problem as causal inference</h1>
 				<hr>
 				<p style="text-align: center; font-size: larger; text-shadow: 0px 0px 0px #0000ff;">Ben Lansdell, Bioengineering UPenn<br><br>St Jude Children's Research Hospital<br>July 22nd 2020
@@ -591,9 +591,9 @@
 			<h2>Related work</h2>
 			<div id="left">
 				<ul>
-					<li> Using causal effect estimators to train large artificial neural networks
+					<li> Using causal effect estimators to train  artificial neural networks
 						<p class="lcred">Lansdell et al, 'Learning to solve the credit assignment problem', ICLR 2020 </p>
-					<li> Primary motor activity supporting dual-control brain computer interfaces<br>
+					<li>Primary motor activity supporting dual-control brain computer interface control<br>
 						<p class="lcred">Lansdell et al, 'Reconfiguring motor circuits for a joint manual and BCI task', IEEE Trans. Neural Systems and Rehabilitation Engineering 2020</p>
 					<li> Behavioral analysis and neuron tracking in the cnidarian Hydra<br>
 						<p class="lcred">(in progress)</p>
@@ -608,10 +608,13 @@
 
 			First, I presented a paper (virtually) at one of the larger CS conferences this year (ICLR) on using this perturbation, or randomization, strategy to solve the credit assignment problem in artificial neural networks. The method lets us train large networks in a more biologically plausible way in a way that the error doesn't scale linearly with the number of neurons in the network, which was the result I showed in this talk. The extension to use RDD instead of perturbations as the causal inference method is current work. 
 
-			Second I'll just mention two data-based projects I have worked or am working on. I mention these because I think of these projects as bringing up some of the other issues to do with causality I mentioned at the start of the talk. 
+			And I'll just finish by mentioning that, before this line of work, I have worked on a number of more data-based projects, and it is really from these projects that my interest in causality arose. 
 
+			First was a project studying primary motor activity in primates as they learn to control what is called a dual-control brain computer interface, that is a BCI which is learnt to be operated in conjuction with on-going movement from the subject. This project, using in part network models based on multi-electrode array data, really made me think about what are limitations of models built on this data, the obvious one being the fact that we observe so few of the relevant neurons in the circuit in order to draw conclusions about the state of the network during BCI control. 
 
+			The other project is a computer vision project, focused on behavioral analysis and neuron tracking in the Hydra, while it is freely moving. This is a challenging computer vision problem which is ongoing. But these projects are interesting because they are cases where, in theory at least, we can image the entire neural activity of the organism. So the limitations of the previous study are lacking. 
 
+			It's an exciting time in neuroscience when we can think about, at least for simple organisms, simultaneously recording the complete neural activity in conjunction with the behavior of the animal. Such projects promise to provide detailed, causal models of a nervous system. 
 
 			• <span style="color: green"></span>
 		  </aside>
@@ -621,9 +624,9 @@
 			<h2>Related work</h2>
 			<div id="left">
 				<ul>
-					<li style="color:red"> Using causal effect estimators to train large artificial neural networks
+					<li style="color:red"> Using causal effect estimators to train artificial neural networks
 						<p class="lcred">Lansdell et al, 'Learning to solve the credit assignment problem', ICLR 2020 </p>
-					<li> Primary motor activity supporting dual-control brain computer interfaces<br>
+					<li> Primary motor activity supporting dual-control brain computer interface control<br>
 						<p class="lcred">Lansdell et al, 'Reconfiguring motor circuits for a joint manual and BCI task', IEEE Trans. Neural Systems and Rehabilitation Engineering 2020</p>
 					<li> Behavioral analysis and neuron tracking in the cnidarian Hydra<br>
 						<p class="lcred">(in progress)</p>
@@ -642,9 +645,9 @@
 			<h2>Related work</h2>
 			<div id="left">
 				<ul>
-					<li> Using causal effect estimators to train large artificial neural networks
+					<li> Using causal effect estimators to train artificial neural networks
 						<p class="lcred">Lansdell et al, 'Learning to solve the credit assignment problem', ICLR 2020 </p>
-					<li style="color:red"> Primary motor activity supporting dual-control brain computer interfaces<br>
+					<li style="color:red"> Primary motor activity supporting dual-control brain computer interface control<br>
 						<p class="lcred">Lansdell et al, 'Reconfiguring motor circuits for a joint manual and BCI task', IEEE Trans. Neural Systems and Rehabilitation Engineering 2020</p>
 					<li> Behavioral analysis and neuron tracking in the cnidarian Hydra<br>
 						<p class="lcred">(in progress)</p>
@@ -663,9 +666,9 @@
 			<h2>Related work</h2>
 			<div id="left">
 				<ul>
-					<li> Using causal effect estimators to train large artificial neural networks
+					<li> Using causal effect estimators to train artificial neural networks
 						<p class="lcred">Lansdell et al, 'Learning to solve the credit assignment problem', ICLR 2020 </p>
-					<li> Primary motor activity supporting dual-control brain computer interfaces<br>
+					<li> Primary motor activity supporting dual-control brain computer interface control<br>
 						<p class="lcred">Lansdell et al, 'Reconfiguring motor circuits for a joint manual and BCI task', IEEE Trans. Neural Systems and Rehabilitation Engineering 2020</p>
 					<li style="color:red"> Behavioral analysis and neuron tracking in the cnidarian Hydra<br>
 						<p class="lcred">(In progress)</p>
